--- a/src/app/App.css
+++ b/src/app/App.css
@@ -7,22 +7,134 @@ html, body {
   height: 100%;
 }
 
+body {
+  background-color: rgb(255, 235, 205, .3);
+}
+
+/*BANNER ON TOP OF PAGE -- HEADER*/
+
+#comm-header-banner {
+  background-color: rgb(224, 218, 204);
+  padding: 5px;
+}
+
+.comm-social-header {
+  margin-left: 300px;
+}
+
+#comm-social-icon {
+  color: rgb(177, 169, 154);
+  font-size: 25px;
+  margin: 5px;
+  /* padding-left: 7px;
+  padding-right: 7px; */
+}
+
+/* GENERAL PAGE STRUCTURE */
+
+.comm-row {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  width: 100%;
+  margin-bottom: 15px;
+}
+
+.comm-image-row {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  width: 100%;
+  text-align: center;
+  margin-top: 14px;
+  margin-bottom: 15px;
+}
+
+.comm-image-col {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: 10px 17.4px;
+}
+
+.comm-link {
+  margin-left: 35px;
+  margin-right: 35px;
+}
+
+/* NAVBAR */
+
+
+
+/* HOMEPAGE BEGIN */
+
+.comm-slideshow {
+  margin-bottom: 9px;
+}
+
+.comm-home-banner {
+  background-color: rgb(139, 184, 232);
+  height: 35px;
+  width: 980px;
+  margin: 0 auto;
+}
+
+.comm-home-pics {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  text-align: center;
+}
+
+#comm-test-1 {
+  margin-left: -70px;
+  margin-right: 70px;
+}
+
+/* PRODUCT PAGE BEGIN */
+/* PRODUCTS */
+
+.comm-products-list {
+  margin: 300px;
+}
+
 .comm-carddeck {
   display: flex;
-  flex-direction: col;
+  flex-direction: row;
   flex-wrap: wrap;
-  align-items: center;
   justify-content: space-evenly;
   text-align: center;
-  width: 1000px;
+  width: 100%;
+  padding: 5%;
 }
 
 .comm-card {
-  width: 320px;
-  height: 500px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  width: 33%;
+  height: 450px;
 }
 
 #comm-img {
   width: 320px;
   height: 280px;
 }
+
+/* FOOTER BITS */
+#comm-footer-background {
+  background-color: rgb(139, 184, 232);
+  margin-left: -15px;
+  margin-right: -15px;
+  text-align: center;
+}
+
+#comm-footer-links {
+  font-size: 12px;
+}
+
+/* RIBBON ON HOMEPAGE */
+
